deployment/dev/managex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managex-school-dev-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:399600302704:certificate/60dc6f42-f5e5-464e-9490-86bf4c9bb25a
spec:
  ingressClassName: alb
  rules: 
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: managex-school-dev-service
                port:
                  number: 80
        
  tls:
    - hosts:
        - greatify.work
      secretName: tls-secret
